Add responsive design

--- a/src/CustomGradient.scss
+++ b/src/CustomGradient.scss
@@ -1,5 +1,6 @@
 .CustomGradient__colorPickers {
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
   margin: auto;
   display: flex;
   flex-direction: row;
