--- a/src/ImageUploader.scss
+++ b/src/ImageUploader.scss
@@ -1,6 +1,6 @@
 .ImageDownloader__images {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   flex-wrap: wrap;
   justify-content: center;
 }
