--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,58 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+nav {
+  box-sizing: border-box;
+  height: 70px;
+  padding: 20px 40px;
+  margin-bottom: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  position: sticky;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.95);
+
+  border-style: solid;
+  border-width: 0 0 1px 0;
+  border-color: #eee;
+}
+
+@media (max-width: 555px) {
+  nav {
+    height: 100px;
+    flex-wrap: wrap;
+  }
+}
+
+nav > span {
+  font-size: 1.375rem;
+  font-weight: bold;
+  margin-left: 0.5rem;
+  margin-right: auto;
+}
+
+nav > ul {
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+}
+
+nav > ul > li {
+  margin-left: 0.5rem;
+}
+
+nav > ul > li > a {
+  font-size: 1.1rem;
+  color: black;
+  text-decoration: none;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+nav > ul > li > a:hover {
+  color: rgb(12, 65, 134);
+}
