--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ nav {
   box-sizing: border-box;
   height: 70px;
   padding: 20px 40px;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 
   display: flex;
   align-items: center;
@@ -29,6 +29,8 @@ nav {
   border-style: solid;
   border-width: 0 0 1px 0;
   border-color: #eee;
+
+  z-index: 1;
 }
 
 @media (max-width: 555px) {
@@ -66,3 +68,23 @@ nav > ul > li > a {
 nav > ul > li > a:hover {
   color: rgb(12, 65, 134);
 }
+
+.panel-app {
+  padding: 1rem;
+}
+
+/* .ImageWithFilter__container {
+  padding: 0;
+}
+
+.ImageWithFilter__newImage {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.ImageWithFilter__originalImage {
+  position: relative;
+  top: 0;
+  left: 0;
+} */
